# glue-tree-viewer

./: .gitignore  CHANGES.md  README.md  TUTORIAL.RST  config.py  data.csv  my_actions.py  qt4_gui_modified.py  session.glu  session2.glu  setup.cfg  test.nw  viewer.py  viewer_state.ui
glue_tree_viewer/: __init__.py  my_actions.py  qt4_gui_modified.py  utils.py  viewer.py
glue_tree_viewer/linking/: data.csv  data.tre  test.py
linking/: link.py
